--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -9,6 +9,7 @@ syscfg.vals:
     DW1000_CLOCK_CALIBRATION: 1
     DW1000_PAN: 0
     # OS_SYSVIEW: 1
+    DW1000_TIME: 1
 
 syscfg.defs:
     DEVICE_ID:
