Included the Transmission_timestamp formula calculated from ccp_reception_timestamp
 1. Added DELTA and NSLOTS macros.
 2. DELTA value is assumed to 100 milliseconds

Signed-off-by: madhu.r.r <madhu.r@pathpartnertech.com>

--- a/apps/clock_master/syscfg.yml
+++ b/apps/clock_master/syscfg.yml
@@ -19,5 +19,12 @@ syscfg.defs:
         description: >
             UUID
         value: ((uint64_t){0x8000}) 
-        
+    DELTA:
+        description: >
+            Total slot time
+        value: 100
+    NSLOTS:
+        description: >
+            Number of slots
+        value: 10
            
