--- a/apps/twr_tag/syscfg.yml
+++ b/apps/twr_tag/syscfg.yml
@@ -19,4 +19,12 @@ syscfg.defs:
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
-        value: ((uint16_t){0x8000})    
+        value: ((uint16_t){0x8000})
+    DELTA:
+        description: >
+            Total slot time
+        value: 100
+    NSLOTS:
+        description: >
+            Number of slots
+        value: 10
