--- a/apps/twr_node_range/syscfg.yml
+++ b/apps/twr_node_range/syscfg.yml
@@ -1,22 +1,23 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 1
-    CONSOLE_RTT: 0
+    CONSOLE_UART: 0
+    CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DW1000_SS_TWR_ENABLED: 0
+    DW1000_SS_TWR_ENABLED: 1
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
     DW1000_CLOCK_CALIBRATION: 0
-    DW1000_PAN: 1
-    DW1000_MAC_FILTERING: 1
-    # OS_SYSVIEW: 1
+    DW1000_PAN: 0
+    DW1000_RANGE: 1
 
 syscfg.defs:
     DEVICE_ID:
         description: >
             Device ID
-        value: ((uint16_t){0x4321})
+        value: ((uint16_t){0x6001})
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
-        value: ((uint16_t){0x8000})    
+        value: ((uint16_t){0x8000})         
+    DW1000_RANGE_NODE_JSON:
+        value: 0
