--- a/apps/twr_node_log/syscfg.yml
+++ b/apps/twr_node_log/syscfg.yml
@@ -1,7 +1,7 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 0
-    CONSOLE_RTT: 1
+    CONSOLE_UART: 1 
+    CONSOLE_RTT: 0
     DW1000_DEVICE_0: 1
     DW1000_SS_TWR_ENABLED: 1
     DW1000_DS_TWR_ENABLED: 1
@@ -9,6 +9,21 @@ syscfg.vals:
     DW1000_CLOCK_CALIBRATION: 0
     DW1000_PAN: 0
     DW1000_LOG: 1
+    # OS_SYSVIEW: 1
+
+    # Include names for statistics.
+    STATS_NAMES: 1
+
+    # Log reboot messages to a flash circular buffer.
+    REBOOT_LOG_FCB: 1
+    LOG_FCB: 1
+    CONFIG_FCB: 1
+
+    # Enable shell commands.
+    STATS_CLI: 1
+    LOG_CLI: 1
+    CONFIG_CLI: 1
+
 syscfg.defs:
     DEVICE_ID:
         description: >
