--- a/apps/twr_tag_log/syscfg.yml
+++ b/apps/twr_tag_log/syscfg.yml
@@ -1,12 +1,12 @@
 syscfg.vals:
     # Route console to RTT
-    CONSOLE_UART: 0
-    CONSOLE_RTT: 1
+    CONSOLE_UART: 1
+    CONSOLE_RTT: 0
     DW1000_DEVICE_0: 1
     DW1000_SS_TWR_ENABLED: 0
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 0
-    DW1000_CLOCK_CALIBRATION: 1
+    DW1000_CLOCK_CALIBRATION: 0
     DW1000_PAN: 0
     DW1000_LOG: 1
     # OS_SYSVIEW: 1
@@ -15,11 +15,16 @@ syscfg.vals:
 
     # Include names for statistics.
     STATS_NAMES: 1
+    
+    # Disable central and observer roles.
+    BLE_ROLE_BROADCASTER: 1
+    BLE_ROLE_CENTRAL: 0
+    BLE_ROLE_OBSERVER: 0
+    BLE_ROLE_PERIPHERAL: 1
 
     # Log reboot messages to a flash circular buffer.
     REBOOT_LOG_FCB: 1
     LOG_FCB: 1
-
     CONFIG_FCB: 1
 
     # Enable shell commands.
@@ -31,6 +36,19 @@ syscfg.vals:
     STATS_NEWTMGR: 1
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
+    CRASH_TEST_NEWTMGR: 1
+    RUNTEST_NEWTMGR: 1
+    SHELL_TASK: 1
+    SHELL_NEWTMGR: 1
+
+    # OS main/default task
+    OS_MAIN_STACK_SIZE: 468
+
+    # Lots of smaller mbufs are required for newtmgr using typical BLE ATT MTU
+    # values.
+    MSYS_1_BLOCK_COUNT: 22
+    MSYS_1_BLOCK_SIZE: 110
+    
 
 syscfg.defs:
     DEVICE_ID:
@@ -40,4 +58,28 @@ syscfg.defs:
     UUID_CCP_MASTER:
         description: >
             Clock Master UUID
-        value: ((uint16_t){0x8000})    
+        value: ((uint16_t){0x8000})
+
+    BLEPRPH_LE_PHY_SUPPORT:
+        description: >
+            Enable support for changing PHY preference on active connection.
+            PHY preference change is triggered by configured GPIO pins.
+            Current PHY is indicated using LEDs connected to configured
+            GPIO pins.
+        value: 0
+    BLEPRPH_LE_PHY_BUTTON_GPIO:
+        description: >
+            GPIO pins for changing PHY preference on active connection. This
+            is an array of 4 GPIO pin numbers for 1M, 2M, LE Coded S=2 and
+            LE Coded S=8 respectively.
+        value: "(int[]){ BUTTON_1, BUTTON_2, BUTTON_3, BUTTON_4 }"
+    BLEPRPH_LE_PHY_LED_GPIO:
+        description: >
+            GPIO pins for indicating current PHY on active connection. This
+            is an array of 3 GPIO pin numbers for 1M, 2M and LE Coded
+            respectively.
+        value: "(int[]){ LED_1, LED_2, LED_3 }"
+
+
+
+    
