--- a/apps/time_tag/syscfg.yml
+++ b/apps/time_tag/syscfg.yml
@@ -8,6 +8,8 @@ syscfg.vals:
     DW1000_DS_TWR_EXT_ENABLED: 0
     DW1000_CLOCK_CALIBRATION: 1
     DW1000_PAN: 0
+    DW1000_CCP_ENABLED: 1
+    DW1000_CLOCK_CALIBRATION: 1
     # OS_SYSVIEW: 1
     DW1000_TIME: 1 
 
