--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -3,7 +3,6 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
-    DW1000_DEVICE_1: 1 
     DW1000_SS_TWR_ENABLED: 1
     DW1000_DS_TWR_ENABLED: 1
     DW1000_DS_TWR_EXT_ENABLED: 1
@@ -13,6 +12,7 @@ syscfg.vals:
     ADAPTIVE_TIMESCALE_ENABLED: 1
     FS_XTALT_AUTOTUNE_ENABLED: 1
     DW1000_PAN: 0
+    TDMA_ENABLED: 1
 
 syscfg.defs:
     DEVICE_ID:
@@ -23,8 +23,3 @@ syscfg.defs:
         description: >
             Clock Master UUID
         value: ((uint16_t){0x8000})  
-    PDOA_ANTENNA_CORRECTION:
-        description: >
-            PDOA Antenna design correction  
-        value: ((float){0.95f})     
-  
