--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -13,6 +13,7 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 1
     DW1000_PAN: 0
     TDMA_ENABLED: 1
+    OS_SYSVIEW: 0
 
 syscfg.defs:
     DEVICE_ID:
