--- a/project.yml
+++ b/project.yml
@@ -29,7 +29,7 @@ project.repositories:
 #
 repository.apache-mynewt-core:
     type: github
-    vers: 0-dev
+    vers: 1.4.0
     user: apache
     repo: mynewt-core
 
@@ -42,7 +42,7 @@ repository.mynewt-dw1000-core:
 
 repository.apache-mynewt-nimble:
     type: github
-    vers: 0-dev
+    vers: 1.0.0
     user: apache
     repo: mynewt-nimble
 
