--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -16,8 +16,9 @@ syscfg.vals:
     ADAPTIVE_TIMESCALE_ENABLED: 0
     FS_XTALT_AUTOTUNE_ENABLED: 0
     TDMA_ENABLED: 1
-    DW1000_PAN: 0
-    
+    DW1000_PAN: 1
+    DW1000_PROVISION: 1 
+
 syscfg.defs:
     DEVICE_ID:
         description: >
@@ -27,4 +28,8 @@ syscfg.defs:
         description: >
             Clock Master UUID
         value: ((uint16_t){0x8000}) 
+    N_NODES:
+        description: >
+            Number of Nodes to range with
+        value: 4 
     
