--- a/apps/lwip_ping_tx/ccp_lwip_ping_tx/pkg.yml
+++ b/apps/lwip_ping_tx/ccp_lwip_ping_tx/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: apps/lwip_ping_rx
+pkg.name: apps/ccp_lwip_ping_tx
 pkg.type: app
 pkg.description: "Basic lwip ping example"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
@@ -32,11 +32,13 @@ pkg.deps:
     - "@apache-mynewt-core/sys/console/full" 
     - "@apache-mynewt-core/sys/shell"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/net/ip/lwip_base"
+
 
 pkg.cflags:
     - "-std=gnu99"
     - "-fms-extensions"
-    
+
 pkg.lflags:
     - "-lm"
