--- a/apps/lwip_ping_tx/ccp_lwip_ping_tx/syscfg.yml
+++ b/apps/lwip_ping_tx/ccp_lwip_ping_tx/syscfg.yml
@@ -3,19 +3,18 @@ syscfg.vals:
     CONSOLE_UART: 1
     CONSOLE_RTT: 0
     DW1000_DEVICE_0: 1
-    DW1000_SS_TWR_ENABLED: 1
-    DW1000_DS_TWR_ENABLED: 1
-    DW1000_DS_TWR_EXT_ENABLED: 0
-    DW1000_CLOCK_CALIBRATION: 0
-    DW1000_PAN: 0
     DW1000_LWIP: 1
     DW1000_CCP_ENABLED: 0
 
 syscfg.defs:
-    DW1000_LWIP_P2P:
-        value: 1
+    SHORT_ADDRESS:
+        value: 0x1234
     DEVICE_PAN_ID:
         value: 0xDECA
+    DEVICE_UUID:
+        description: >
+            UUID
+        value: ((uint64_t){0x8000})        
     DEV_IP6_ADDR_1:
         value: 0x1020304
     DEV_IP6_ADDR_2:
@@ -24,6 +23,7 @@ syscfg.defs:
         value: 0x90A0B0C
     DEV_IP6_ADDR_4:
         value: 0xD0E0F0F
+
     TGT_IP6_ADDR_1:
         value: 0x2030405
     TGT_IP6_ADDR_2:
@@ -32,22 +32,7 @@ syscfg.defs:
         value: 0xA0B0C0D
     TGT_IP6_ADDR_4:
         value: 0xE0F0F0F
-    MAX_NUM_NODES:
-        value: 2
-    PAYLOAD_STRING_LEN:
-        value: 10
-    PAYLOAD_STRING:
-        value: 'Lucky'
-
-    DEVICE_ID:
-        description: >
-            Device ID
-        value: ((uint16_t){0x1234})
-    UUID_CCP_MASTER:
-        description: >
-            Clock Master UUID
-        value: ((uint16_t){0x8000})         
-    NUM_FRAMES:
-        value: 1
     BUFFER_SIZE:
         value: 100
+    NUM_FRAMES:
+        value: 1
