--- a/apps/lwip_ping_tx/syscfg.yml
+++ b/apps/lwip_ping_tx/syscfg.yml
@@ -4,13 +4,17 @@ syscfg.vals:
     CONSOLE_RTT: 0
     DW1000_DEVICE_0: 1
     DW1000_LWIP: 1
+    DW1000_CCP_ENABLED: 0
 
 syscfg.defs:
     SHORT_ADDRESS:
         value: 0x1234
     DEVICE_PAN_ID:
         value: 0xDECA
-        
+    DEVICE_UUID:
+        description: >
+            UUID
+        value: ((uint64_t){0x8000})        
     DEV_IP6_ADDR_1:
         value: 0x1020304
     DEV_IP6_ADDR_2:
