--- a/apps/twr_tag_nranges_tdma/syscfg.yml
+++ b/apps/twr_tag_nranges_tdma/syscfg.yml
@@ -1,7 +1,7 @@
 syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 1
-    CONSOLE_UART_BAUD: '1000000' 
+    CONSOLE_UART_BAUD: '115200' 
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
     DW1000_DEVICE_0: 1
